--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="verify_user_info">User Info:</string>
     <string name="verify_photo">Photo:</string>
     <string name="verify_read_card">Read Card</string>
-    <string name="btn_verify">Verify</string>
+    <string name="btn_verify">Verify Finger</string>
     <string name="btn_zhuce">Enrolment</string>
+    <string name="btn_Write_Card">Write Card</string>
     <string name="btn_open">Open Reader</string>
+    <string name="btn_zhuce_finger">Enrolment FingerPrint</string>
+
     <string name="verify_reading_card">Read Card...</string>
 
     <string name="init_faild">Init Faile</string>
@@ -15,6 +18,6 @@
     <string name="gender">Gender</string>
     <string name="choose_photo">Choose A Photo</string>
     <string name="updata">Write Card...</string>
-    <string name="updata_success">Updating Success</string>
+    <string name="updata_success">Write Card Success</string>
     <string name="input_info">Please enter valid information</string>
 </resources>
