--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -6,7 +6,7 @@
     <string name="verify_photo">照片:</string>
     <string name="verify_read_card">读卡</string>
     <string name="btn_verify">验证指纹</string>
-    <string name="btn_zhuce">注册</string>
+    <string name="btn_zhuce">注册信息</string>
     <string name="btn_zhuce_finger">注册指纹</string>
     <string name="btn_clear">清除卡片</string>
     <string name="btn_open">打开</string>
@@ -19,6 +19,8 @@
     <string name="choose_photo">选择照片</string>
     <string name="updata_success">写卡成功</string>
     <string name="input_info">请输入有效信息</string>
+    <string name="clera_card">卡片信息清除成功</string>
+    <string name="cleraing_card">清除中...</string>
 
 
 
