--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="verify_photo">Photo:</string>
     <string name="verify_read_card">Read Card</string>
     <string name="btn_verify">Verify Finger</string>
-    <string name="btn_zhuce">Enrolment</string>
+    <string name="btn_zhuce">Enrol Card</string>
     <string name="btn_Write_Card">Write Card</string>
     <string name="btn_open">Open Reader</string>
     <string name="btn_clear">Clear Card</string>
-    <string name="btn_zhuce_finger">Enrolment FingerPrint</string>
+    <string name="btn_zhuce_finger">Enrol FingerPrint</string>
 
     <string name="verify_reading_card">Read Card...</string>
 
@@ -21,4 +21,6 @@
     <string name="updata">Write Card...</string>
     <string name="updata_success">Write Card Success</string>
     <string name="input_info">Please enter valid information</string>
+    <string name="clera_card">Card Clear Success</string>
+    <string name="cleraing_card">Clearing...</string>
 </resources>
