--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="input_info">Please enter valid information</string>
     <string name="clera_card">Card Clear Success</string>
     <string name="cleraing_card">Clearing...</string>
+    <string name="select_photo">select a picture</string>
+    <string name="take_photo">take a picture</string>
+    <string name="head_portrait">head portrait</string>
 </resources>
